# Auto-Anouncements

./: .deepsource.toml  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HTMLMessage.py  LICENSE.md  PLANNING.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  TextMessage.py  __init__.py  __main__.py  docker-compose.yml  message.html  pyproject.toml  requirements.txt  send.py  setup.cfg  setup.py
.github/: FUNDING.python.yml  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/agents/: api-agent.md  docs-agent.md  lint-agent.md  test-agent.md
.github/workflows/: build.yml  cla.yml  codeql-analysis.yml  codeql.yml  dependency-review.yml  docker-publish.yml  push-to-pypi.yml  pylint.yml  test.yml
docs/: CUSTOMIZATION.md  README.md  USAGE.md
docs/legal/: CLA_ENTITY.md  CLA_INDIVIDUAL.md  EULA.md  PRIVACY.md  TERMS.md
send/: __init__.py  send.py
tests/: ANNOUNCEMENTS for November 26 2017.htm  test_send.py
tests/ANNOUNCEMENTS for November 26 2017_files/: filelist.xml  themedata.thmx
