[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "Auto-Announcements"
version = "0.2.0"
authors = [
  { name= "willtheorangeguy" },
]
description = "A bot framework that automatically sends announcements (or any other file) to a specified email address on Saturday night or when the script is run."
readme = "README.md"
license = { file="LICENSE.md" }
requires-python = ">=3.9"
classifiers = [
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Topic :: Communications :: Email',
]

[project.urls]
"Homepage" = "https://github.com/Dog-Face-Development/Auto-Anouncements"
"Bug Tracker" = "https://github.com/Dog-Face-Development/Auto-Anouncements"